# NSU_GraduateProd

./: .gitignore  README.md
1D_2A/baseline/: baseline.ipynb
1D_2A/baseline/test/: test.ipynb
1D_2A/lib/: 1D_2A.cc  CMakeLists.txt
1D_2A/lib/model_dir/: keras2cpp.model
1D_2A/lib/test/: 1D_2A_test.cpp  CMakeLists.txt  prepare_test_data.py  test_inference_time.cpp
1D_2L/baseline/: baseline.ipynb
1D_2L/baseline/test/: test.ipynb
1D_2L/lib/: 1D_2L.cc  CMakeLists.txt
1D_2L/lib/1D_2L/: model_inference.cpp  model_inference.h
1D_2L_chart/: README.md
1D_2L_chart/PtKerasConversion/: tf_to_keras_model_conversion.ipynb
1D_2L_chart/baseline/: linear_baseline.ipynb  linear_baseline_python.py  torch_lib.py
1D_2L_chart/lib/torchlib_module/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  module_1D_2L_chart.cpp  module_1D_2L_chart.sln  module_1D_2L_chart.vcxproj  module_1D_2L_chart.vcxproj.filters
1D_3L/baseline/: baseline.ipynb
1D_3L/lib/: 1D_3L.cc  CMakeLists.txt
1D_3L_chart/baseline/: baseline.ipynb
1D_3L_chart/lib/: 1D_3L_chart.cc  CMakeLists.txt
PtKerasConversion/: convert_model.ipynb
PtKerasConversion/models/: keras_model.h5  linear_model0_0006777.pt  model.onnx
PtKerasConversion/tools/: keras2cpp.py
pz_2a/baseline/: baseline.ipynb
pz_2a/lib/: CMakeLists.txt  pz_2a.cc
pz_3L/baseline/: baseline.ipynb
pz_3L/lib/: CMakeLists.txt  pz_3L.cc
test_simulations/: baseline.ipynb
tools/: classic_ml_lib.py  torch_lib.py
(+62 files in other folders)
